--- a/find_line_fangyan.ipynb
+++ b/find_line_fangyan.ipynb
@@ -237,6 +237,7 @@
     "    This function is used to draw the full extent of the lane, here we take all edges after\n",
     "    canny edge detection and compute slop of each edge, group them \n",
     "    \"\"\"\n",
+    "    # parameter for region mask, this is for extrapolating to boundary of the region mask\n",
     "    width = img.shape[1]\n",
     "    height = img.shape[0]\n",
     "\n",
@@ -247,7 +248,8 @@
     "    x_left_up = 0.448 * width\n",
     "    x_right_up = 0.5625 * width\n",
     "    x_right_down = 0.9375 * width\n",
-    "\n",
+    "    \n",
+    "    # for grouping lines with similar slop\n",
     "    slops = {} # key : (slop, dis), value: ((x1, y1), (x2, y2))\n",
     "    slop_threshold = 0.006\n",
     "    for line in lines:\n",
