--- a/find_line_fangyan.ipynb
+++ b/find_line_fangyan.ipynb
@@ -268,7 +268,7 @@
     "                        newP1 = ()\n",
     "                        newP2 = ()\n",
     "                        \n",
-    "                        # find a pair of points with longest distance\n",
+    "                        # find a pair of points with longest distance, that is, merge or connect lines with similar slop\n",
     "                        x_axis =[]\n",
     "                        x_axis.append(x1)\n",
     "                        x_axis.append(x2)\n",
