--- a/find_line_fangyan.ipynb
+++ b/find_line_fangyan.ipynb
@@ -329,10 +329,10 @@
     "        \n",
     "        if((slop > 0.5 and slop < 0.8) or (slop > -0.8 and slop < -0.5)):\n",
     "            # draw(upper_limit, lower_limit, slop, dis, img, color, thickness) \n",
-    "            if(slop > 0  and leng > right_len):\n",
+    "            if(slop > 0  and p1[0] > (x_left_up + x_right_up) / 2):\n",
     "                valid_slops_right.append(slop)\n",
     "                valid_dis_right.append(dis)\n",
-    "            if(slop < 0 and leng > left_len):\n",
+    "            if(slop < 0 and p1[0] < (x_left_up + x_right_up) / 2):\n",
     "                valid_slops_left.append(slop)\n",
     "                valid_dis_left.append(dis)\n",
     "\n",
