--- a/find_line_fangyan.ipynb
+++ b/find_line_fangyan.ipynb
@@ -328,7 +328,6 @@
     "        leng = Dis(p1, p2)\n",
     "        \n",
     "        if((slop > 0.5 and slop < 0.8) or (slop > -0.8 and slop < -0.5)):\n",
-    "            # draw(upper_limit, lower_limit, slop, dis, img, color, thickness) \n",
     "            if(slop > 0  and p1[0] > (x_left_up + x_right_up) / 2):\n",
     "                valid_slops_right.append(slop)\n",
     "                valid_dis_right.append(dis)\n",
@@ -351,9 +350,7 @@
     "    if(slop_right != 0):\n",
     "        draw(upper_limit, lower_limit, slop_right, dis_right, img, color, thickness)\n",
     "    if(slop_left != 0):\n",
-    "        draw(upper_limit, lower_limit, slop_left, dis_left, img, color, thickness)  \n",
-    "    cv2.imshow('llinees', img)\n",
-    "    # cv2.waitKey(0)"
+    "        draw(upper_limit, lower_limit, slop_left, dis_left, img, color, thickness)  \n"
    ]
   },
   {
